<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic"
            android:title="@string/all"/>
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic"
            android:title="@string/favorites"/>
        <item
            android:id="@+id/nav_remindess"
            android:icon="@drawable/ic"
            android:title="@string/remindess"/>
        <item
            android:id="@+id/nav_tag"
            android:icon="@drawable/ic"
            android:title="@string/tags"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic"
            android:title="@string/trash"/>

    </group>


    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic"
                android:title="@string/theme"/>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic"
                android:title="@string/account"/>
            <item
                android:id="@+id/nav_sound"
                android:icon="@drawable/ic"
                android:title="@string/sound"/>
        </menu>
    </item>
</menu>